# car_run

./: .tmux.conf  copy.txt
f1tenth_description/: CMakeLists.txt  package.xml
f1tenth_description/config/: controllers.yaml
f1tenth_description/urdf/: F110.xacro  macros.xacro  racecar.gazebo  racecar.xacro
f1tenth_gazebo_sim/: package.xml  setup.cfg  setup.py
f1tenth_gazebo_sim/launch/: sim_launch.py
f1tenth_gym_ros/: Dockerfile  docker-compose.yml
f1tenth_sim_env/: package.xml  setup.cfg  setup.py  test.world
f1tenth_sim_env/launch/: env_launch.py  sim_launch.py
my_racing_agent/: package.xml  setup.cfg  setup.py
my_racing_agent/launch/: sim_with_agent.launch.py
my_racing_agent/my_racing_agent/: analyze.py  drive_node.py  nn_drive_node.py  only_wall.py  p.csv  pid.csv  wall_follower_model.pth  wall_log.py
my_robot/: log_of claude.txt  package.xml  setup.py
my_robot/config/nav2/: nav2_params.yaml
my_robot/config/slam/: slam_toolbox_params.yaml
my_robot/launch/: debug_rsp_launch.py  sim_launch.py  slam_nav2_launch.py
my_robot/urdf/xacros/: race.xacro
my_robot/worlds/: empty.world  mitrack.world  tracky.world
wall_follower_nn/: README.md
wall_follower_nn/config/: model_config.json
wall_follower_nn/data/: pid.csv
wall_follower_nn/models/: scaler.pkl
wall_follower_nn/notebooks/: interactive_analysis.ipynb
wall_follower_nn/results/20260108_231214/: training_config.json
wall_follower_nn/scripts/: train_nn.py
